k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: github-version-comparator
  labels:
    name: github-version-comparator
    app: github-version-comparator
